[gd_scene load_steps=7 format=2]

[ext_resource path="res://hero.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://mob.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/background.png" type="Texture" id=5]
[ext_resource path="res://Resources/LOZ_Sword_Slash.wav" type="AudioStream" id=6]

[node name="main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 300 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 300 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Background" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 512, 300 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
